Update JS prototype

--- a/JS/index.html
+++ b/JS/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="box"></div>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="Prototype.js"></script>
   </body>
 </html>
