--- a/JS/index.html
+++ b/JS/index.html
@@ -15,6 +15,7 @@
   <body>
     <div id="box"></div>
     <!-- <script src="index.js"></script> -->
-    <script src="Prototype.js"></script>
+    <!-- <script src="Prototype.js"></script> -->
+    <script src="ES6.js"></script>
   </body>
 </html>
