Update My Promise

--- a/JS/index.html
+++ b/JS/index.html
@@ -16,6 +16,6 @@
     <div id="box"></div>
     <!-- <script src="index.js"></script> -->
     <!-- <script src="Prototype.js"></script> -->
-    <script src="ES6.js"></script>
+    <script src="Promise.js"></script>
   </body>
 </html>
